# android_device_xiaomi_mido

./: Android.bp  Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  aosip.dependencies  aosip_mido.mk  compatibility_matrix.xml  config.fs  device.mk  extract-files.sh  framework_manifest.xml  full_mido.mk  lineage.dependencies  lineage.mk  lineage_mido.mk  manifest.xml  odm.prop  product.prop  product_prop.mk  prop.mk  proprietary-files-qc.txt  proprietary-files.txt  setup-makefiles.sh  system.prop  system_ext.prop  update-sha1sums.py  vendor.prop  vendor_framework_compatibility_matrix.xml  vendor_prop.mk  vendorsetup.sh
qcom-caf/audio/: .gitupstream  Android.mk  Makefile.am  NOTICE  configure.ac
qcom-caf/audio/adsprpcd/: Android.bp  adsprpcd.c  vendor.qti.audio-adsprpc-service.rc
qcom-caf/audio/audiod/: Android.mk  AudioDaemon.cpp
qcom-caf/audio/configs/: audio_vendor_product.mk
qcom-caf/audio/configs/apq8098_latv/: apq8098_latv.mk  audio_policy.conf  audio_policy_configuration.xml
qcom-caf/audio/configs/atoll/: atoll.mk  audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  mixer_paths.xml  mixer_paths_qrd.xml  mixer_paths_wcd937x.xml  mixer_paths_wcd937xqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_wcd937x.xml
qcom-caf/audio/configs/bengal/: audio_effects.xml  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_scubaidp.xml  audio_platform_info_scubaqrd.xml  audio_policy_configuration.xml  bengal.mk  mixer_paths.xml  mixer_paths_qrd.xml  mixer_paths_scubaidp.xml  mixer_paths_scubaqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_scubaidp.xml  sound_trigger_mixer_paths_scubaqrd.xml  sound_trigger_platform_info.xml
qcom-caf/audio/configs/common/: audio_policy_configuration.xml  copyright.txt  default.mk  mixer_xml_utils.py
qcom-caf/audio/configs/common_au/: audio_policy_configuration.xml  car_audio_configuration.xml
qcom-caf/audio/configs/holi/: audio_effects.xml  audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  audio_tuning_mixer.txt  holi.mk  mixer_paths.xml  mixer_paths_qrd.xml  mixer_paths_usbc.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_usbc.xml  sound_trigger_platform_info.xml
qcom-caf/audio/configs/kona/: audio_effects.xml  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  audio_tuning_mixer.txt  kona.mk  mixer_paths.xml  mixer_paths_cdp.xml  mixer_paths_qrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_cdp.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_platform_info.xml
qcom-caf/audio/configs/lahaina/: audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_hdk.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_shimaidp.xml  audio_platform_info_shimaqrd.xml  audio_platform_info_yupikidp.xml  audio_platform_info_yupikqrd.xml  audio_policy_configuration.xml  audio_tuning_mixer.txt  lahaina.mk  mixer_paths.xml  mixer_paths_cdp.xml  mixer_paths_hdk.xml  mixer_paths_hhg.xml  mixer_paths_qrd.xml  mixer_paths_shimaidp.xml  mixer_paths_shimaidps.xml  mixer_paths_shimaqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_cdp.xml  sound_trigger_mixer_paths_hdk.xml  sound_trigger_mixer_paths_hhg.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_shimaidp.xml  sound_trigger_mixer_paths_shimaidps.xml  sound_trigger_mixer_paths_shimaqrd.xml  (+1 more)
qcom-caf/audio/hal/: Android.mk  Makefile.am  acdb.c  acdb.h  ahal_config_helper.cpp  ahal_config_helper.h  audio_hal_plugin.h  audio_hw.c  audio_hw.h  audio_hw_extn_api.c  audio_hw_extn_api.h  audio_perf.cpp  audio_perf.h  platform_api.h  platform_info.c  voice.c  voice.h
qcom-caf/audio/hdmi_in_test/: Android.mk  Makefile.am
qcom-caf/audio/mm-audio/: Android.mk  Makefile.am  configure.ac
qcom-caf/audio/post_proc/: Android.mk  Makefile.am  bass_boost.c  bass_boost.h  bundle.c  effect_api.c  effect_util.c  equalizer.c  equalizer.h  hw_accelerator.c  ma_listener.c  reverb.c  reverb.h  virtualizer.c  virtualizer.h  volume_listener.c
qcom-caf/audio/qahw/: Android.mk  Makefile.am  configure.ac
qcom-caf/audio/qahw_api/: Android.mk  Makefile.am
qcom-caf/audio/visualizer/: Android.mk  offload_visualizer.c
qcom-caf/audio/voice_processing/: Android.mk  voice_processing.c
qcom-caf/display/display-commonsys-intf/: .clang-format  Android.bp  Makefile.am  configure.ac
qcom-caf/display/libgralloc/: Android.mk  Makefile.am  adreno_utils.h  alloc_controller.cpp  alloc_controller.h  fb_priv.h  framebuffer.cpp  gpu.cpp  gpu.h  gr.h  gralloc.cpp  ionalloc.cpp  ionalloc.h  mapper.cpp  memalloc.h
qcom-caf/display/libqdutils/: Android.bp  Makefile.am  display_config.cpp  display_config.h  profiler.cpp  profiler.h  qdMetaData.cpp  qd_utils.cpp  qd_utils.h
qcom-caf/display/libqservice/: Android.bp  IQClient.cpp  IQClient.h  IQHDMIClient.cpp  IQHDMIClient.h  IQService.cpp  IQService.h  Makefile.am  QService.cpp  QService.h  QServiceUtils.h
qcom-caf/media/: Android.mk  Makefile.am  NOTICE  configure.ac
qcom-caf/media/conf_files/: config.mk
qcom-caf/media/hypv-intercept/: Android.mk  Makefile.am  hypv_intercept.cpp  hypv_intercept.h
qcom-caf/media/libaac/: Android.mk  aacDecode.cpp  aacDecode.h  aacEncode.cpp  aacEncode.h
qcom-caf/media/libc2dcolorconvert/: Android.mk  C2DColorConverter.cpp  C2DColorConverter.h  Makefile.am
qcom-caf/media/libsidebandstreamhandle/: Android.mk  SidebandHandleBase.h  SidebandStreamHandle.cpp  SidebandStreamHandle.h
qcom-caf/media/libstagefrighthw/: Android.mk  QComOMXMetadata.h  QComOMXPlugin.cpp
qcom-caf/media/mm-core/: Android.mk  Makefile.am  mm-core.pc.in
qcom-caf/media/mm-video-v4l2/: Makefile.am
(+1703 files in other folders)
